Use AstroReactTable, update height to fix overflow

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -42,6 +42,6 @@
 }
 
 .Contacts-list-panel {
-  height: calc(100vh - 10.1875rem);
+  height: calc(100vh - 10.25rem);
   padding: var(--spacing-0) var(--spacing-6) var(--spacing-4);
 }
